--- a/index.html
+++ b/index.html
@@ -1,49 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="./src/css/media-query.css">
   
   <title>Frontend Mentor | Single Price Grid Component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Join our community
+  <main class="container">
+    <div class="container__community">
+      <h1>Join our community</h1>
 
-  30-day, hassle-free money back guarantee
+      <h2>30-day, hassle-free money back guarantee</h2>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+      <p>Gain access to our full library of tutorials along with expert code reviews. 
+        Perfect for any developers who are serious about honing their skills.</p>
+    </div>
 
-  Monthly Subscription
+    <div class="container__plano">
+      <div class="preco">
+        <h2 class="titulo">Monthly Subscription</h2>
+        <p class="preco__dolar"><span>&dollar;29</span> per month</p>
+        <p class="full__access">Full access for less than &dollar;1 a day</p>
+        <button>Sign Up</button>
+      </div>
+    </div>
 
-  &dollar;29 per month
+    <div class="container__sobre-nos">
+      <h2 class="titulo">Why Us</h2>
+    
+      <ul>
+        <li><a href="#">Tutorials by industry experts</a></li>
+        <li><a href="#">Peer &amp; expert code review</a></li>
+        <li><a href="#">Coding exercises</a></li>
+        <li><a href="#">Access to our GitHub repos</a></li>
+        <li><a href="#">Community forum</a></li>
+        <li><a href="#">Flashcard decks</a></li>
+        <li><a href="#">New videos every week</a></li>
+      </ul>
+    </div>
+  </main>
 
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.linkedin.com/in/rodrigo-faria-000790263/" target="_blank">Rodrigo Faria</a>.
     </p>
   </footer>
 </body>
